# libyuri_ndi_module

./: CMakeLists.txt  README.md
CMakeModules/: FindNDI.cmake  FindYURI.cmake  yuri_install.cmake
configs/: ndi_to_glx_events.xml
src/modules/: CMakeLists.txt
src/modules/common/: utils.cpp  utils.h
src/modules/ndi/: CMakeLists.txt  Licence.cpp  Licence.h  NDIInput.cpp  NDIInput.h  NDIOutput.cpp  NDIOutput.h  register.cpp
src/modules/ndi_blank/: BlankGenerator.cpp  BlankGenerator.h  CMakeLists.txt
src/modules/ndi_combine/: CMakeLists.txt  Combine.cpp  Combine.h
src/modules/ndi_net/: CMakeLists.txt  NetInfo.cpp  NetInfo.h
src/modules/ndi_scale/: CMakeLists.txt  Scale.cpp  Scale.h
